--- a/Kubernetes-Manifests-file/deploy_svc.yml
+++ b/Kubernetes-Manifests-file/deploy_svc.yml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: regapp
-        image: 483216680875.dkr.ecr.us-east-1.amazonaws.com/demo:53
+        image: 209753525936.dkr.ecr.ap-southeast-2.amazonaws.com/mahesh863
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
