--- a/Kubernetes-Manifests-file/deploy_svc.yml
+++ b/Kubernetes-Manifests-file/deploy_svc.yml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: regapp
-        image: 590183937104.dkr.ecr.us-east-1.amazonaws.com/demo:4
+        image: 590183937104.dkr.ecr.us-east-1.amazonaws.com/demo1
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
